Fix: Resolution, header text align

--- a/files/styles.css
+++ b/files/styles.css
@@ -14,7 +14,7 @@
 }
 /*Header*/
 .header{
-    width: 100vw;
+    width: 100%;
     height: 5.5rem;
     display: flex;
     justify-content: space-between;
@@ -98,7 +98,7 @@
     height: 3.2rem;
 }
 .main-header{
-    width: 100vw;
+    width: 100%;
     height: calc(100vh - 5.5rem);
     position: relative;
     display: flex;
@@ -136,6 +136,7 @@
     border: .1rem solid var(--lighter);
     background-color: transparent;
     color: var(--lighter);
+    transition: all 0.3s;
 }
 .btn-main:hover{
     border-color: var(--lighter);
@@ -190,7 +191,11 @@
     height: 2rem;
 }
 .section-title{
+    height: 2rem;
     color: var(--light);
+    font-weight: 400;
+    font-size: 2rem;
+    line-height: 2.3rem;
     margin: 0;
 }
 /*Darkness Background*/
@@ -205,7 +210,7 @@
 }
 /*About*/
 .about{
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background: url("/assets/about-background.png") center center/cover no-repeat;
 }
@@ -271,6 +276,7 @@
     font-weight: 400;
     background-color: var(--light);
     border: none;
+    transition: all 0.3s;
 }
 .btn-cv:hover{
     color: var(--lighter);
@@ -283,13 +289,13 @@
 }
 /*Skills*/
 .skills{
-    width: 37.5rem;
-    height: 66.7rem;
+    width: 100%;
+    height: 100vh;
     background: url("/assets/skills.png") center center/cover no-repeat;
 }
 /*Skills Content*/
 .skills-content{
-    width: 33.5rem;
+    width: 100%;
     height: 17rem;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -313,19 +319,23 @@
     height: 4.1rem;
 }
 /*Skill button*/
-.btn-skills{
-    width: 10rem;
-    height: 6rem;
+.btn-skill-content{
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
-    gap: .5rem;
+    transition: all 0.3s;
+}
+.btn-skills{
+    width: 10rem;
+    height: 4rem;
     font-size: 2rem;
     font-weight: 400;
     color: var(--primary-color);
     background-color: transparent;
-    border-color: transparent;
+    border: none;
     padding: .1rem 0;
+    transition: all 0.3s;
 }
 .btn-skills:hover{
     color: var(--primary-color);
